Use Alt+scroll to change brush size